--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Home | Netflix </title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="Netflix/style.css" />
+    <script src="Netflix/script.js"></script>
 </head>
 
 <body>
@@ -15,10 +15,10 @@
     <div class="nav">
         <div class="nav__left">
             <a href="index.html">
-                <img class="nav_logo" src="./logo.png" alt=""></a>
+                <img class="nav_logo" src="Netflix/logo.png" alt=""></a>
         </div>
         <div class="nav_right">
-            <img src="./avatar.png" class="nav_avatar" alt="">
+            <img src="Netflix/avatar.png" class="nav_avatar" alt="">
         </div>
     </div>
 
